--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"author": "Chihoko Neudeck",
 	"description": "A project that does something awesome",
 	"keywords": [ "freecodecamp", "related", "words" ],
+	"license": "MIT",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
