--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
 	"description": "A project that does something awesome",
 	"keywords": [ "freecodecamp", "related", "words" ],
 	"license": "MIT",
+	"version": "1.0.0",
 	"dependencies": {
-		"express": "^4.14.0"
+		"express": "^4.14.0",
+		"@freecodecamp/example":"1.1.0"
 	},
 	"main": "server.js",
 	"scripts": {
